--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoSalesInstantly">
-        <activity android:name=".HomeView"></activity>
+        <activity android:name=".VisualizacionTiendasView"></activity>
+        <activity android:name=".PerfilUsuarioView" />
+        <activity android:name=".HomeView" />
         <activity android:name=".PaginaInicialView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegistroActivityView" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
