--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,16 +35,16 @@
             android:label="@string/title_activity_maps">
         </activity>
         <activity android:name=".VisualizacionTiendasView" >
+        </activity>
+        <activity android:name=".PerfilUsuarioView" />
+        <activity android:name=".HomeView" >
+        </activity>
+        <activity android:name=".PaginaInicialView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".PerfilUsuarioView" />
-        <activity android:name=".HomeView" />
-        <activity android:name=".PaginaInicialView">
-
         </activity>
         <activity android:name=".RegistroActivityView" />
         <activity android:name=".MainActivity" />
