--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
-}
+    id 'com.google.firebase.crashlytics'
 
+}
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -36,7 +37,9 @@ android {
 }
 
 dependencies {
-
+    implementation platform('com.google.firebase:firebase-bom:28.3.0')
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
